[gd_scene load_steps=12 format=3 uid="uid://dcf6rneq8p38a"]

[ext_resource type="Script" path="res://main.gd" id="1_dfo52"]
[ext_resource type="PackedScene" uid="uid://cedl0k1m3e60y" path="res://player.tscn" id="1_mpic5"]
[ext_resource type="PackedScene" uid="uid://buohye6fgsdyf" path="res://mob.tscn" id="2_juxb6"]
[ext_resource type="FontFile" uid="uid://d38uv3cy1wmto" path="res://fonts/Montserrat-Medium.ttf" id="4_ksbpf"]
[ext_resource type="Script" path="res://score_label.gd" id="5_77na4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hj35e"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_ess7g"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f5g1h"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ojgxv"]
material = SubResource("StandardMaterial3D_f5g1h")

[sub_resource type="Curve3D" id="Curve3D_5kyix"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -13.9923, 0, -15.983, 0, 0, 0, 0, 0, 0, 14.0451, 0, -16.028, 0, 0, 0, 0, 0, 0, 14.0698, 0, 15.9891, 0, 0, 0, 0, 0, 0, -14.0685, 0, 16.0221, 0, 0, 0, 0, 0, 0, -13.9923, 0, -15.983),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Theme" id="Theme_dgx8d"]
default_font = ExtResource("4_ksbpf")
default_font_size = 22

[node name="Main" type="Node"]
script = ExtResource("1_dfo52")
mob_scene = ExtResource("2_juxb6")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_hj35e")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_ess7g")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 25, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_mpic5")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)
projection = 1
size = 20.0

[node name="Cylinders" type="Node3D" parent="."]

[node name="LeftUp" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0, -16)
mesh = SubResource("CylinderMesh_ojgxv")

[node name="LeftDown" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0, 16)
mesh = SubResource("CylinderMesh_ojgxv")

[node name="RightUp" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, -16)
mesh = SubResource("CylinderMesh_ojgxv")

[node name="RightDown" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 16)
mesh = SubResource("CylinderMesh_ojgxv")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_5kyix")

[node name="SpwanLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(0.00160499, 0, -0.999998, 0, 1, 0, 0.999998, 0, 0.00160499, -13.9923, 0, -15.983)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_dgx8d")

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 76.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
script = ExtResource("5_77na4")

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -14.0
offset_right = 57.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Press \"enter\" to play again!"

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
